--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -495,6 +495,8 @@
     import { createEditorStateManager } from './lib/editor/state.js';
     // Import editor metrics manager
     import { createEditorMetricsManager } from './lib/editor/metrics.js';
+    // Import editor overrides manager
+    import { createEditorOverridesManager } from './lib/editor/overrides.js';
 
     // Declare early to avoid initialization order issues
     let debouncedPreview = () => { };
@@ -581,7 +583,6 @@
 
       // State
       let savedSelection = null;
-      let editingNavLink = null; // The chip element being edited
 
       // ============ AUTO-SAVE ============
       let editorStateManager = null;
@@ -1044,264 +1045,75 @@
       });
 
       // ============ NAVIGATION EDITOR ============
+      const insertBytesBtn = document.getElementById('insert-bytes-btn');
+      let editorOverridesManager = null;
 
-      // Load global navigation into disabled fields
-      function loadGlobalNavigation() {
-        navLinks.innerHTML = '';
-        if (window.globalConfig?.header?.links) {
-          window.globalConfig.header.links.forEach(link => {
-            navLinks.appendChild(createNavChip(link.text, link.href));
-          });
+      function getEditorOverridesManager() {
+        if (editorOverridesManager) {
+          return editorOverridesManager;
         }
+
+        editorOverridesManager = createEditorOverridesManager({
+          navEnabled,
+          navGlobalHint,
+          navLinks,
+          addNavLinkBtn,
+          navLinkPopup,
+          navLinkText,
+          navLinkHref,
+          navLinkSave,
+          navLinkDelete,
+          navLinkCancel,
+          footerEnabled,
+          footerGlobalHint,
+          footerText,
+          insertBytesBtn,
+          metaEnabled,
+          metaGlobalHint,
+          metaDescription,
+          metaAuthor,
+          titleOverrideEnabled,
+          titleOverrideHint,
+          titleOverrideInput,
+          cssEnabled,
+          cssGlobalHint,
+          cssRules,
+          liveCSS,
+          t,
+          updateTitleBytes,
+          onPreviewRequested: () => debouncedPreview(),
+          getGlobalConfig: () => window.globalConfig
+        });
+
+        return editorOverridesManager;
       }
 
-      navEnabled.addEventListener('change', () => {
-        navGlobalHint.classList.toggle('hidden', navEnabled.checked);
-
-        // Toggle disabled state
-        const chips = navLinks.querySelectorAll('.nav-chip');
-        chips.forEach(chip => {
-          chip.style.pointerEvents = navEnabled.checked ? 'auto' : 'none';
-          chip.style.opacity = navEnabled.checked ? '1' : '0.6';
-        });
-        addNavLinkBtn.disabled = !navEnabled.checked;
-      });
+      function loadGlobalNavigation() {
+        return getEditorOverridesManager().loadGlobalNavigation();
+      }
 
       function createNavChip(text, href) {
-        const chip = document.createElement('span');
-        chip.className = 'nav-chip';
-        chip.dataset.href = href;
-        chip.textContent = text;
-        chip.draggable = true;
-        chip.addEventListener('click', () => editNavLink(chip));
-
-        // Drag & Drop
-        chip.addEventListener('dragstart', (e) => {
-          chip.classList.add('dragging');
-          e.dataTransfer.effectAllowed = 'move';
-        });
-
-        chip.addEventListener('dragend', () => {
-          chip.classList.remove('dragging');
-          navLinks.querySelectorAll('.nav-chip').forEach(c => c.classList.remove('drag-over'));
-        });
-
-        chip.addEventListener('dragover', (e) => {
-          e.preventDefault();
-          const dragging = navLinks.querySelector('.dragging');
-          if (dragging && dragging !== chip) {
-            chip.classList.add('drag-over');
-          }
-        });
-
-        chip.addEventListener('dragleave', () => {
-          chip.classList.remove('drag-over');
-        });
-
-        chip.addEventListener('drop', (e) => {
-          e.preventDefault();
-          const dragging = navLinks.querySelector('.dragging');
-          if (dragging && dragging !== chip) {
-            const allChips = [...navLinks.querySelectorAll('.nav-chip')];
-            const dragIndex = allChips.indexOf(dragging);
-            const dropIndex = allChips.indexOf(chip);
-            if (dragIndex < dropIndex) {
-              chip.after(dragging);
-            } else {
-              chip.before(dragging);
-            }
-          }
-          chip.classList.remove('drag-over');
-        });
-
-        return chip;
+        return getEditorOverridesManager().createNavChip(text, href);
       }
 
-      function editNavLink(chip) {
-        editingNavLink = chip;
-        navLinkText.value = chip.textContent;
-        navLinkHref.value = chip.dataset.href;
-        navLinkDelete.classList.remove('hidden');
-        navLinkPopup.classList.remove('hidden');
-        navLinkText.focus();
-      }
-
-      addNavLinkBtn.addEventListener('click', () => {
-        editingNavLink = null;
-        navLinkText.value = '';
-        navLinkHref.value = '';
-        navLinkDelete.classList.add('hidden');
-        navLinkPopup.classList.remove('hidden');
-        navLinkText.focus();
-      });
-
-      navLinkSave.addEventListener('click', () => {
-        const text = navLinkText.value.trim();
-        const href = navLinkHref.value.trim();
-        if (!text || !href) return;
-
-        if (editingNavLink) {
-          editingNavLink.textContent = text;
-          editingNavLink.dataset.href = href;
-        } else {
-          navLinks.appendChild(createNavChip(text, href));
-        }
-        navLinkPopup.classList.add('hidden');
-        editingNavLink = null;
-      });
-
-      navLinkDelete.addEventListener('click', () => {
-        if (editingNavLink) {
-          editingNavLink.remove();
-        }
-        navLinkPopup.classList.add('hidden');
-        editingNavLink = null;
-      });
-
-      navLinkCancel.addEventListener('click', () => {
-        navLinkPopup.classList.add('hidden');
-        editingNavLink = null;
-      });
-
-      // ============ FOOTER EDITOR ============
-
-      const insertBytesBtn = document.getElementById('insert-bytes-btn');
-
-      // Load global footer into disabled field
       function loadGlobalFooter() {
-        if (window.globalConfig?.footer?.content) {
-          footerText.value = window.globalConfig.footer.content;
-        }
+        return getEditorOverridesManager().loadGlobalFooter();
       }
 
-      footerEnabled.addEventListener('change', () => {
-        footerGlobalHint.classList.toggle('hidden', footerEnabled.checked);
-        footerText.disabled = !footerEnabled.checked;
-        insertBytesBtn.disabled = !footerEnabled.checked;
-      });
-
-      // ============ META EDITOR ============
-
-      // Load global meta into disabled fields
       function loadGlobalMeta() {
-        if (window.globalConfig?.meta?.description) {
-          metaDescription.value = window.globalConfig.meta.description;
-        }
-        if (window.globalConfig?.meta?.author) {
-          metaAuthor.value = window.globalConfig.meta.author;
-        }
-      }
-
-      metaEnabled.addEventListener('change', () => {
-        metaGlobalHint.classList.toggle('hidden', metaEnabled.checked);
-        metaDescription.disabled = !metaEnabled.checked;
-        metaAuthor.disabled = !metaEnabled.checked;
-      });
-
-      // ============ TITLE OVERRIDE EDITOR ============
-
-      const checkIcon = '<svg class="hint-icon" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg>';
-
-      // HTML escape function to prevent XSS
-      function escapeHtml(text) {
-        const div = document.createElement('div');
-        div.textContent = text;
-        return div.innerHTML;
+        return getEditorOverridesManager().loadGlobalMeta();
       }
 
       function updateTitleOverrideHint() {
-        const siteTitleEnabled = window.globalConfig?.siteTitleEnabled !== false;
-        const siteTitleText = window.globalConfig?.siteTitle;
-        if (siteTitleEnabled && siteTitleText) {
-          const escapedTitle = escapeHtml(siteTitleText);
-          titleOverrideHint.innerHTML = `${checkIcon} <span>${t('editor.browserTabTitleHintWithSite').replace('Site Title', escapedTitle)}</span>`;
-        } else {
-          titleOverrideHint.innerHTML = `${checkIcon} <span data-i18n="editor.browserTabTitleHint">${t('editor.browserTabTitleHint')}</span>`;
-        }
+        return getEditorOverridesManager().updateTitleOverrideHint();
       }
 
-      titleOverrideEnabled.addEventListener('change', () => {
-        titleOverrideHint.classList.toggle('hidden', titleOverrideEnabled.checked);
-        titleOverrideInput.disabled = !titleOverrideEnabled.checked;
-        updateTitleBytes();
-      });
-
-      titleOverrideInput.addEventListener('input', () => {
-        updateTitleBytes();
-      });
-
-      insertBytesBtn.addEventListener('click', () => {
-        const cursorPos = footerText.selectionStart;
-        const textBefore = footerText.value.substring(0, cursorPos);
-        const textAfter = footerText.value.substring(cursorPos);
-        footerText.value = textBefore + '{{bytes}}' + textAfter;
-        footerText.focus();
-        footerText.setSelectionRange(cursorPos + 9, cursorPos + 9);
-        debouncedPreview();
-      });
-
-      // ============ CSS EDITOR ============
-
-      function getThemeDisplayName(cssMode) {
-        const names = {
-          'default': 'CMS Default Theme',
-          'light': 'CMS Light Theme',
-          'dark': 'CMS Dark Theme',
-          'custom': 'Custom CSS'
-        };
-        return names[cssMode] || cssMode || 'CMS Default Theme';
-      }
-
-      // Don't load global CSS - this field is for ADDITIONAL CSS only
       function loadGlobalCSS() {
-        // Leave empty - this textarea is for additional CSS only
-        // Global CSS is already included in the base template
-
-        // Update hint with theme name
-        const themeName = getThemeDisplayName(window.globalConfig?.cssMode);
-        cssGlobalHint.innerHTML = `${checkIcon} <span>${themeName} is used globally</span>`;
+        return getEditorOverridesManager().loadGlobalCSS();
       }
-
-      cssEnabled.addEventListener('change', () => {
-        cssGlobalHint.classList.toggle('hidden', cssEnabled.checked);
-        cssRules.disabled = !cssEnabled.checked;
-      });
-
-      // ============ LIVE CSS ============
-
-      cssRules.addEventListener('input', () => {
-        applyLiveCSS();
-      });
 
       function applyLiveCSS() {
-        const css = cssRules.value.trim();
-        // Scope CSS to block-editor to avoid breaking admin UI
-        // Simple approach: prefix all rules with .block-editor
-        if (!css) {
-          liveCSS.textContent = '';
-          return;
-        }
-
-        // Basic scoping - wrap in .block-editor context
-        // This won't handle all edge cases but works for simple rules
-        try {
-          const scopedCSS = css.replace(/([^{}]+)\{/g, (match, selector) => {
-            const selectors = selector.split(',').map(s => {
-              s = s.trim();
-              if (s.startsWith('@') || s.startsWith('from') || s.startsWith('to') || /^\d+%$/.test(s)) {
-                return s;
-              }
-              if (s === 'body' || s === 'html') {
-                return '.block-editor';
-              }
-              return `.block-editor ${s}`;
-            }).join(', ');
-            return selectors + ' {';
-          });
-          liveCSS.textContent = scopedCSS;
-        } catch (e) {
-          // Invalid CSS, ignore
-        }
+        return getEditorOverridesManager().applyLiveCSS();
       }
 
       // ============ AUTO-SLUG ============
